# Orbit-Desktop

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/env/: load.go
backend/internal/domain/: chat.go  historial.go  personality.go
backend/internal/handler/: chat_handler.go  historial_handler.go  personality_handler.go  system_handler.go
backend/internal/repository/: supabase_repo.go
backend/internal/service/: ai_service.go
frontend/src/: App.jsx  App.module.scss
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/Sidebar/: Sidebar.jsx  Sidebar.module.scss
frontend/src/pages/ChatPage/: ChatPage.jsx  ChatPage.module.scss
frontend/src/pages/PersonalityPage/: PersonalityPage.jsx  PersonalityPage.module.scss
frontend/src/pages/SettingsPage/: SettingsPage.module.scss
frontend/src/service/: api.js
frontend/src/store/: chatStore.js
