[package]
name = "Orbit"
version = "1.0.0-2607"
description = "Orbit Desktop"
authors = ["MightyWolf"]
license = "GPL-3.0-or-later"
repository = "https://github.com/MightyWolf117/Orbit-Desktop"
default-run = "Orbit"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "app-all", "process-relaunch", "updater", "dialog-all", "protocol-all", "fs-all", "path-all", "shell-sidecar" ] }
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
